--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -12,7 +12,7 @@ body{
     background-size:cover;
      
 }
-/*Estilos del conteiner*/
+/* Estilos generales*/
 .container__grid{
     display: grid;
     grid-template-columns: auto;
@@ -24,17 +24,17 @@ body{
 .encabezado{
     display: grid;
     grid-area: header;
+    grid-template-columns:0.1fr 1fr 1fr;
     background-color: rgba(64, 77, 59, 0.534);
 }
 .encabezado nav{
-    margin-left: 76%;
-    margin-top: 0%;
+    margin-top: 10%;
 }
 .navbar{
     display: flex;
+    flex-direction: row;
     list-style: none;     
-    margin-left: 5%;
-    
+    margin-left:50%;
 }
 .navbar li a{
     text-decoration: none;    
@@ -50,20 +50,19 @@ body{
 .Logo{
     display: flex;
     flex-direction: row;
-    margin-top: 1%;
-    margin-left: 1%;
-    width: 3rem;
+    padding-top:5%;
+    padding-left: 5%;
+    width: 50px;
 }
 .lang{
-    background-color: rgba(44, 100, 26, 0.089);
-    margin-left: 95%;
-    margin-top: 0.5rem;
+    background-color: rgba(113, 206, 82, 0.089);
+    margin-left: 89%;
 }
 .hola{
-    display:flex;
-    width:20%;
-    margin-left: 5%;
-    font-size: 70%;
+    width:40%;
+    margin-left: 1%;
+    margin-top: 5%;
+    font-size: 80%;
 }
 .bold{
     font-weight: 900;
@@ -83,40 +82,6 @@ body{
 .iconowhatsapp{
     width: 50px;
 }
-.contenedormain{
-    grid-area: main;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10%;
-    
-}
-.foto{
-    display: flex;   
-    flex-direction: column;
-    padding-left: 2%;
-    
-}
-.fotopersonal{
-    display: flex;
-    flex-direction: column;
-    border-radius:20px;
-    box-shadow: 0px 0px 20px #000;
-}
-.cv{
-    text-decoration: none;
-    color: #000;
-   
-}
-.presentacionuno{
-    width:30rem;
-    text-align: center;
-    align-content: center;
-    padding: 2%; 
-}
-
 footer{
     grid-area: footer;
     display: flex;
@@ -126,7 +91,7 @@ footer{
     display: flex;
     list-style: none;
     justify-content:center ; 
-    margin-top: 6%; 
+    margin-top: 14%; 
 }
 .contacto__redes{
     display: flex;
@@ -139,34 +104,147 @@ footer{
     letter-spacing: 5px;   
     margin-top: 1%;
 }
-
-@media screen and (max-width: 800px) {
-    .navbar{
+/*Estilos index*/
+.contenedormain{
+    grid-area: main;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7%;
+}
+.foto{
+    display: flex;   
+    flex-direction: column;
+    padding-left: 2%; 
+}
+.fotopersonal{
+    display: flex;
+    flex-direction: column;
+    border-radius:20px;
+    box-shadow: 0px 0px 20px #000;
+}
+.cv{
+    text-decoration: none;
+    color: #000;
+    padding-left: 40%;
+}
+.presentacionuno{
+    width:25%;
+    text-align: center;
+    align-content: center;
+    padding: 2%; 
+    font-size: 1.3rem;
+}
+/*Estilos Sobre Mi*/
+.presentaciondos{
+    width:25%;
+    margin-top: 1%;
+    text-align: center;
+    align-content: center;    
+    font-size: 1rem;
+}
+/*Estilos Experiencia*/
+.contenedormainexperiencia{
+    background-color: aquamarine;
+    grid-area: main;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7%;   
+}
+.trabajos{
+    display: flex;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    padding-left:10%;
+}
+.encuesta{
+    display: flex;   
+    flex-direction: column;
+    padding-left: 2%;
+}
+.presentaciontres{
+    width:25%;
+    flex-direction: column;
+    margin-top: 1%;
+    text-align: center;
+    align-content: center;    
+    font-size: 1rem;
+}
+.habilidades{
+    display: flex;   
+    flex-direction: column;
+    padding-left:15%;
+}
+/*media queri*/
+@media only screen and (min-width: 0px) and (max-width: 1000px){
+    .encabezado{
         display: flex;
-        flex-direction: column;
-        align-items: space-around;
-        margin-left: 1%;
-        
-
-
-    }
-    .fotopersonal{
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        border-radius:20px;
-        box-shadow: 0px 0px 20px #000;
+        flex-wrap: wrap;
     }
     .hola{
-        display:flex;
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 2%;
+        margin-top: 7%;
+        font-size:65%;
+        width:50%;
+    }
+    .right{
+        display: flex;
+        align-content: center;
+        width: 96%;
+        margin-top: 0%;
+        padding-top: 0%;
+    }
+    .navbar{
+        display: flex;
+        text-align: center;
+        justify-content: space-between;
+        width: 10%;
+        margin-left:1%;
+        width: 100%;
+        padding-left: 5%;
+    }
+    .navbar li a{
         font-size: 1rem;
-        width:60%;
-        margin-left: 5%;
-        font-size: 60%;
+        padding-left: 12px;
+    }
+   .presentacionuno{
+        width:90%;
+        text-align: center;
+        align-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+    }
+    .presentaciondos{
+        width:90%;
+        text-align: center;
+        align-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+    }
+
+    .foto {
+        justify-content: center;
+        margin-top: 15%;
+    }
+    .fotopersonal{
+       width:95%; 
+       margin-left: 2%;
     }
     .lang{
-        background-color: rgba(44, 100, 26, 0.089);
-        margin-left:1rem;
-        margin-top: 0.5rem;
+        display: flex;
+       justify-content: center;
     }
+    .box__fixed{
+        display: none;
+    }
+   
 }
