--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -7,9 +7,9 @@
 }
 body{
     font-family:'Poppins', sans-serif;
-    background-image: url(../images/119-3264x2176.jpg) ;
-    background-repeat: no-repeat;
-    background-size:cover;
+    background-image: linear-gradient(to left bottom, #845ec2, #646cc5, #4875c1, #367cb7, #3880aa, #3d8aa4, #50929c, #679896, #84a597, #a2b19d, #bebdaa, #d5cabd);    
+    min-height: 100vh;
+    
      
 }
 /* Estilos generales*/
@@ -21,48 +21,17 @@ body{
                          "main"
                          "footer";
 }
-.encabezado{
-    display: grid;
-    grid-area: header;
-    grid-template-columns:0.1fr 1fr 1fr;
-    background-color: rgba(64, 77, 59, 0.534);
-}
-.encabezado nav{
-    margin-top: 10%;
-}
-.navbar{
-    display: flex;
-    flex-direction: row;
-    list-style: none;     
-    margin-left:50%;
-}
-.navbar li a{
-    text-decoration: none;    
-    color:  rgb(13, 14, 13);
-    padding-left: 10px;
-    padding-right: 8px;
-}
-.navbar__bold{
-    font-weight: 900;
-    background-color: rgba(5, 56, 9, 0.185); 
-    border-radius:10%;
+.navegacion{
+    background-color:rgba(64, 77, 59, 0.473);
 }
 .Logo{
-    display: flex;
-    flex-direction: row;
-    padding-top:5%;
-    padding-left: 5%;
-    width: 50px;
+    padding-top:0.5%;
+    padding-left: 0.5%;
+    width: 60px; 
 }
 .lang{
     background-color: rgba(113, 206, 82, 0.089);
-    margin-left: 89%;
-}
-.hola{
-    width:40%;
-    margin-left: 1%;
-    margin-top: 5%;
-    font-size: 80%;
+    margin-left: 1350%;
 }
 .bold{
     font-weight: 900;
@@ -70,28 +39,36 @@ body{
     border-radius:5px;
 }
 .box__fixed{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
-    width: 45px;
-    height: 45px;
-    bottom:20px;
-    right:20px;
+    width: 32px;
+    height: 32px;
+    bottom:2%;
+    right:2%;
     background-color: #4dc247a9;
     border-radius: 50%;
-    box-shadow: 2px 2px 6px;
+    box-shadow: 2px 2px 10px;
 }
 .iconowhatsapp{
-    width: 50px;
+    width: 40px;
 }
 footer{
     grid-area: footer;
     display: flex;
     flex-direction: column;
+    
+}
+main{
+    grid-area: main;
+    min-height: 52vh;
 }
 .contacto{
     display: flex;
     list-style: none;
     justify-content:center ; 
-    margin-top: 14%; 
+    margin-top: 8%; 
 }
 .contacto__redes{
     display: flex;
@@ -102,8 +79,13 @@ footer{
     justify-content:center ; 
     display: inline-flex;
     letter-spacing: 5px;   
-    margin-top: 1%;
+    margin-top: 2px;
 }
+.navbar-brand{
+    margin-top: 1%;
+    margin-left: 1%;
+}
+
 /*Estilos index*/
 .contenedormain{
     grid-area: main;
@@ -112,7 +94,8 @@ footer{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 7%;
+    margin-top: 4%;
+    
 }
 .foto{
     display: flex;   
@@ -120,10 +103,11 @@ footer{
     padding-left: 2%; 
 }
 .fotopersonal{
+    width:300px;
     display: flex;
     flex-direction: column;
-    border-radius:20px;
-    box-shadow: 0px 0px 20px #000;
+    border-radius:200px;
+   
 }
 .cv{
     text-decoration: none;
@@ -135,41 +119,11 @@ footer{
     text-align: center;
     align-content: center;
     padding: 2%; 
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
 /*Estilos Sobre Mi*/
 .presentaciondos{
     width:25%;
-    margin-top: 1%;
-    text-align: center;
-    align-content: center;    
-    font-size: 1rem;
-}
-/*Estilos Experiencia*/
-.contenedormainexperiencia{
-    background-color: aquamarine;
-    grid-area: main;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 7%;   
-}
-.trabajos{
-    display: flex;
-    width: 20%;
-    justify-content: center;
-    align-items: center;
-    padding-left:10%;
-}
-.encuesta{
-    display: flex;   
-    flex-direction: column;
-    padding-left: 2%;
-}
-.presentaciontres{
-    width:25%;
-    flex-direction: column;
     margin-top: 1%;
     text-align: center;
     align-content: center;    
@@ -180,47 +134,154 @@ footer{
     flex-direction: column;
     padding-left:15%;
 }
+/*Estilos Experiencia*/
+.contenedormainexperiencia{
+    grid-area: main;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;   
+}
+.trabajos{
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+    padding-left:3%;
+}
+.encuesta{
+    display: flex;   
+    flex-direction: column;
+    padding-left: 2%;
+}
+.presentacionTres{
+    width:25%;
+    margin-top: 1%;
+    text-align: center;
+    align-content: center;    
+    font-size: 1rem;
+}
+/*Estilos Clientes*/
+.contenedormainClientes{
+    grid-area: main;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4%;
+}
+/*Formulario contacto*/
+.formulario{
+    position:relative;
+    margin-top: 2%;
+    width: 100%;
+    height: 100%;
+    display:flex;   
+    justify-content: center;
+    align-items: center;
+    padding: 20px 100px;
+}
+.formulario::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    background-image:url(../images/1627890722-cyber-pro-edited.avif);
+    background-repeat: no-repeat;
+    background-position: center;
+    filter:blur(50px);
+    z-index: -1;
+    background-color: rgba(0,0,0,0.5);
+}
+.contact-box{
+    max-width: 850px;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 19px 5px rgba( 0, 0, 0, 0.19 );
+}
+.left{
+    background: url(../images/logolp.png) no-repeat center;
+    background-size: cover;
+    height: 100%;
+}
+.right{
+    padding: 25px 40px;
+}
+.field{
+    width: 100%;
+    border: 2px solid rgba(0, 0, 0, 0.184);
+    outline:none;
+    background-color:rgba(0, 0, 0, 0.1);
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    margin-bottom: 22px;
+    transition: all 0.3s ease-in-out;
+}
+.field:hover{
+    background-color: #b9bff577;
+
+}
+.btn2{
+    width: 40%;
+    padding: 0.3rem 0.3rem;
+    background-color:rgba(0, 0, 0, 0);
+    font-size:80%;
+    outline:none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: none;
+    border-radius: 10px;
+   
+}
+.btn2:hover{
+    background-color: #b9bff577;
+}
+.field:focus{
+    border: 2px solid #b9bff577;
+    background-color: rgba(7, 7, 7, 0.199);
+}
+.mainContacto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.mapa{
+   border-radius: 20px;
+}
+
 /*media queri*/
 @media only screen and (min-width: 0px) and (max-width: 1000px){
     .encabezado{
         display: flex;
         flex-wrap: wrap;
     }
-    .hola{
+    /*.hola{
         display: flex;
         flex-wrap: wrap;
         margin-left: 2%;
         margin-top: 7%;
         font-size:65%;
         width:50%;
-    }
-    .right{
-        display: flex;
-        align-content: center;
-        width: 96%;
-        margin-top: 0%;
-        padding-top: 0%;
-    }
-    .navbar{
-        display: flex;
-        text-align: center;
-        justify-content: space-between;
-        width: 10%;
-        margin-left:1%;
-        width: 100%;
-        padding-left: 5%;
-    }
-    .navbar li a{
-        font-size: 1rem;
-        padding-left: 12px;
-    }
-   .presentacionuno{
+    }*/
+    .presentacionuno{
         width:90%;
         text-align: center;
         align-content: center;
         margin-left: auto;
         margin-right: auto;
         margin-top: 10%;
+    }
+    .foto {
+        justify-content: center;
+        margin-top: 15%;
+    }
+    .fotopersonal{
+       width:95%; 
+       margin-left: 2%;
     }
     .presentaciondos{
         width:90%;
@@ -230,21 +291,24 @@ footer{
         margin-right: auto;
         margin-top: 10%;
     }
-
-    .foto {
-        justify-content: center;
-        margin-top: 15%;
+    .presentacionTres{
+        width:90%;
+        text-align: center;
+        align-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;     
+    }    
+    .contenedormainClientes{
+        margin-top: 20%;
+        margin-bottom: 15%;
     }
-    .fotopersonal{
-       width:95%; 
-       margin-left: 2%;
-    }
-    .lang{
+    .contact-box{
         display: flex;
-       justify-content: center;
+        border-radius: 30px;
     }
-    .box__fixed{
-        display: none;
-    }
+    
+   
    
 }
+
