--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -135,13 +135,12 @@ main{
     padding-left:15%;
 }
 /*Estilos Experiencia*/
-.contenedormainexperiencia{
+.experiencia{
     grid-area: main;
     display: flex;
+    margin-top: 10%;
     justify-content: center;
-    align-items: center;
-    margin-top: 5%;   
-}
+ }
 .trabajos{
     width: 30%;
     justify-content: center;
@@ -149,14 +148,27 @@ main{
     padding-left:3%;
 }
 .encuesta{
-    padding-left: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .presentacionTres{
-    width:25%;
-    margin-top: 1%;
+    width:30%;
     text-align: center;
     align-content: center;    
     font-size: 1rem;
+}
+.envio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.experiencia info{
+    display: flex;
+    justify-content: center;
+    align-items: center;   
 }
 /*Estilos Clientes*/
 .contenedormainClientes{
@@ -305,8 +317,7 @@ main{
         display: flex;
         border-radius: 30px;
     }
-    
+        
    
    
 }
-
