agregando mediaquerie index

--- a/sass_vivo/scss/_variables.scss
+++ b/sass_vivo/scss/_variables.scss
@@ -1,5 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/*color de fondo*/
+$fondo: linear-gradient(to left bottom, #845ec2, #646cc5, #4875c1, #367cb7, #3880aa, #3d8aa4, #50929c, #679896, #84a597, #a2b19d, #bebdaa, #d5cabd);
+$fondonav:rgba(64, 77, 59, 0.473);
+/**/
+
+
+/*medidas iconos*/
+$icono-width: 40px;
