--- a/sass_vivo/scss/_variables.scss
+++ b/sass_vivo/scss/_variables.scss
@@ -6,3 +6,10 @@ $fondonav:rgba(64, 77, 59, 0.473);
 
 /*medidas iconos*/
 $icono-width: 40px;
+/*maps*/
+$redes:(
+    instagram:#d6249f,
+    whatsapp:#4dc247a9,
+    linkedin:red ,
+
+);
