--- a/sass_vivo/scss/_iconowa.scss
+++ b/sass_vivo/scss/_iconowa.scss
@@ -7,7 +7,7 @@
     height: 32px;
     bottom:2%;
     right:2%;
-    background-color: #4dc247a9;
+    background-color:map-get($redes,whatsapp);
     border-radius: 50%;
     box-shadow: 2px 2px 10px;
                         img{
