--- a/sass_vivo/scss/_estilosgenerales.scss
+++ b/sass_vivo/scss/_estilosgenerales.scss
@@ -1,6 +1,6 @@
 body{
     font-family:'Poppins', sans-serif;
-    background-image: linear-gradient(to left bottom, #845ec2, #646cc5, #4875c1, #367cb7, #3880aa, #3d8aa4, #50929c, #679896, #84a597, #a2b19d, #bebdaa, #d5cabd);    
+    background-image:$fondo;    
     min-height: 100vh;
                     div .container__grid{
                         display: grid;
