--- a/sass_vivo/scss/style.scss
+++ b/sass_vivo/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./footer";
 @import "./iconowa";
 @import "./mediaquerie";
+@import "./sobremi";
 
 main{
     grid-area: main;
@@ -16,11 +17,14 @@ main{
     align-items: center;
     margin-top: 4%;
              section{
-                width:25%;
+                width:30%;
                 text-align: center;
                 align-content: center;
                 padding: 2%; 
                 font-size: 1.2rem;
+                p{
+                    width: 500px;
+                }
              }  
              section {
                 display: flex;   
@@ -41,4 +45,107 @@ main{
                         }         
              }  
 
+}
+
+section{
+    .trabajos{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+                img{
+                    margin-left:20px ;
+                }
+    }
+
+}
+.contenedormainClientes{
+    grid-area: main;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4%;
+}
+.formulario{
+    position:relative;
+    margin-top: 2%;
+    width: 100%;
+    height: 100%;
+    display:flex;   
+    justify-content: center;
+    align-items: center;
+    padding: 20px 100px;
+}
+.formulario::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    background-image:url(../images/1627890722-cyber-pro-edited.avif);
+    background-repeat: no-repeat;
+    background-position: center;
+    filter:blur(50px);
+    z-index: -1;
+    background-color: rgba(0,0,0,0.5);
+}
+.contact-box{
+    max-width: 850px;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 19px 5px rgba( 0, 0, 0, 0.19 );
+}
+.left{
+    background: url(.../images/logolp.png) no-repeat center;
+    background-size: cover;
+    height: 100%;
+}
+.right{
+    padding: 25px 40px;
+}
+.field{
+    width: 100%;
+    border: 2px solid rgba(0, 0, 0, 0.184);
+    outline:none;
+    background-color:rgba(0, 0, 0, 0.1);
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    margin-bottom: 22px;
+    transition: all 0.3s ease-in-out;
+}
+.field:hover{
+    background-color: #b9bff577;
+
+}
+.btn2{
+    width: 40%;
+    padding: 0.3rem 0.3rem;
+    background-color:rgba(0, 0, 0, 0);
+    font-size:80%;
+    outline:none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: none;
+    border-radius: 10px;
+   
+}
+.btn2:hover{
+    background-color: #b9bff577;
+}
+.field:focus{
+    border: 2px solid #b9bff577;
+    background-color: rgba(7, 7, 7, 0.199);
+}
+.mainContacto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.mapa{
+   border-radius: 20px;
 }
