--- a/sass_vivo/scss/layout/_sobremi.scss
+++ b/sass_vivo/scss/layout/_sobremi.scss
@@ -11,6 +11,7 @@ main{
     section {
         p{
             width:500px;
+            font-family:'Poppins', sans-serif;
         }    
     }
     section{
