modificaciones sass2 y animaciones

--- a/sass_vivo/css/estilos.css
+++ b/sass_vivo/css/estilos.css
@@ -1,5 +1,4 @@
 /*color de fondo*/
-/**/
 /*medidas iconos*/
 /*maps*/
 * {
@@ -8,7 +7,7 @@
   box-sizing: border-box; }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-image: linear-gradient(to left bottom, #845ec2, #646cc5, #4875c1, #367cb7, #3880aa, #3d8aa4, #50929c, #679896, #84a597, #a2b19d, #bebdaa, #d5cabd);
   min-height: 100vh; }
   body div .container__grid {
@@ -31,7 +30,7 @@ header {
   header div a {
     margin-top: 1%;
     margin-left: 1%;
-    font-family: 'Poppins', sans-serif; }
+    font-family: "Poppins", sans-serif; }
   header div div select {
     background-color: rgba(113, 206, 82, 0.089);
     margin-left: 1200%; }
@@ -41,11 +40,34 @@ header {
     align-items: center;
     width: 90px;
     margin-left: 0.5%;
-    font-family: 'Poppins', sans-serif; }
+    font-family: "Poppins", sans-serif; }
 
 main {
   grid-area: main;
-  min-height: 52vh; }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4%; }
+  main section, main section img {
+    width: 30%;
+    text-align: center;
+    align-content: center;
+    padding: 2%;
+    font-size: 1.2rem; }
+    main section p {
+      width: 500px; }
+  main section, main section img {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; }
+    main section img {
+      border-radius: 200px;
+      width: 300px; }
+    main section a button {
+      width: 100%; }
 
 footer {
   grid-area: footer;
@@ -66,7 +88,44 @@ ul {
   align-items: center;
   letter-spacing: 5px;
   margin-top: 2px;
-  font-family: 'Poppins', sans-serif; }
+  font-family: "Poppins", sans-serif; }
+
+main div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; }
+  main div h1 {
+    flex-direction: column; }
+
+main section p {
+  width: 500px;
+  font-family: "Poppins", sans-serif; }
+
+main section, main section img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  main section ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    main section ul li {
+      display: flex;
+      margin-top: 30px; }
+      main section ul li img {
+        width: 40px;
+        margin-left: 20px; }
+
+section .trabajos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px; }
+  section .trabajos img {
+    margin-left: 20px; }
 
 .box__fixed {
   display: flex;
@@ -82,6 +141,92 @@ ul {
   box-shadow: 2px 2px 10px; }
   .box__fixed img {
     width: 40px; }
+
+main h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem; }
+
+main div .formulario {
+  position: relative;
+  margin-top: 2%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 100px; }
+
+main div .contact-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+  max-width: 850px;
+  border-radius: 30px; }
+
+main div .left {
+  height: 100%;
+  background: url(../logolp.png) no-repeat center;
+  background-size: cover;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px; }
+
+main div .right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 40px; }
+
+main div .field {
+  width: 220px;
+  border: 2px solid rgba(0, 0, 0, 0.184);
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  margin-bottom: 22px;
+  transition: all 0.3s ease-in-out; }
+
+main div .field:hover {
+  background-color: #b9bff59f; }
+
+main div .btn2 {
+  width: 40%;
+  padding: 0.3rem 0.3rem;
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 80%;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  border: none;
+  border-radius: 10px; }
+
+main div .btn2:hover {
+  background-color: #b9bff577; }
+
+main div .field:focus {
+  border: 2px solid #b9bff577;
+  background-color: rgba(7, 7, 7, 0.199); }
+
+main section, main section img {
+  margin-top: 20px; }
+  main section h2 {
+    font-family: "Poppins", sans-serif;
+    font-size: 2rem;
+    width: 1000px; }
+  main section .mapa {
+    border-radius: 20px;
+    margin-top: 20px; }
+
+.carousel {
+  grid-area: main;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%; }
 
 @media only screen and (min-width: 0px) and (max-width: 1024px) {
   .encabezado {
@@ -130,166 +275,6 @@ ul {
   .left {
     display: none; }
   .contact-box {
-    width: 300px; } }
-
-main div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%; }
-  main div h1 {
-    flex-direction: column; }
-
-main section p {
-  width: 500px;
-  font-family: 'Poppins', sans-serif; }
-
-main section {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  main section ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: stretch;
-    align-items: initial; }
-    main section ul li {
-      display: flex;
-      margin-top: 30px; }
-      main section ul li img {
-        width: 40px;
-        margin-left: 20px; }
-
-main h1 {
-  font-family: 'Poppins', sans-serif;
-  font-size: 2rem; }
-
-main div .formulario {
-  position: relative;
-  margin-top: 2%;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 100px; }
-
-main div .formulario::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  background-image: url(../images/1627890722-cyber-pro-edited.avif);
-  background-repeat: no-repeat;
-  background-position: center;
-  filter: blur(50px);
-  z-index: -1;
-  background-color: rgba(0, 0, 0, 0.5); }
-
-main div .contact-box {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
-  max-width: 850px;
-  border-radius: 30px; }
-
-main div .left {
-  height: 100%;
-  background: url(../logolp.png) no-repeat center;
-  background-size: cover;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px; }
-
-main div .right {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 25px 40px; }
-
-main div .field {
-  width: 220px;
-  border: 2px solid rgba(0, 0, 0, 0.184);
-  outline: none;
-  background-color: rgba(0, 0, 0, 0.1);
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  margin-bottom: 22px;
-  transition: all 0.3s ease-in-out; }
-
-main div .field:hover {
-  background-color: #b9bff577; }
-
-main div .btn2 {
-  width: 40%;
-  padding: 0.3rem 0.3rem;
-  background-color: rgba(0, 0, 0, 0);
-  font-size: 80%;
-  outline: none;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  border: none;
-  border-radius: 10px; }
-
-main div .btn2:hover {
-  background-color: #b9bff577; }
-
-main div .field:focus {
-  border: 2px solid #b9bff577;
-  background-color: rgba(7, 7, 7, 0.199); }
-
-main section {
-  margin-top: 20px; }
-  main section h2 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 2rem;
-    width: 1000px; }
-  main section .mapa {
-    border-radius: 20px;
-    margin-top: 20px; }
-
-main {
-  grid-area: main;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-top: 4%; }
-  main section {
-    width: 30%;
-    text-align: center;
-    align-content: center;
-    padding: 2%;
-    font-size: 1.2rem; }
-    main section p {
-      width: 500px; }
-  main section {
-    display: flex;
-    flex-direction: column;
-    padding-left: 2%;
-    justify-content: center;
-    align-items: center; }
-    main section img {
-      width: 300px;
-      display: flex;
-      flex-direction: column;
-      border-radius: 200px; }
-    main section a button {
-      width: 100%; }
-
-section .trabajos {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px; }
-  section .trabajos img {
-    margin-left: 20px; }
-
-main .clientes {
-  font-size: 100px; }
+    width: 300px; }
+  .carousel {
+    width: 80%; } }
