--- a/sass_vivo/scss/_estilosgenerales.scss
+++ b/sass_vivo/scss/_estilosgenerales.scss
@@ -1,5 +1,5 @@
 body{
-    font-family:'Poppins', sans-serif;
+    font-family:$font-principal;
     background-image:$fondo;    
     min-height: 100vh;
                     div .container__grid{
