--- a/sass_vivo/scss/layout/_footer.scss
+++ b/sass_vivo/scss/layout/_footer.scss
@@ -18,5 +18,5 @@ ul{
     align-items: center;
     letter-spacing: 5px;   
     margin-top: 2px;
-    font-family:'Poppins', sans-serif;
+    font-family:$font-principal;
 }
